syntax = "proto3";


package spot;


service SpotService {
    rpc AddOrder (AddOrderRequest) returns (AddOrderResponse);
    rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
    rpc CancelAllOrders (CancelAllOrdersRequest) returns (CancelAllOrdersResponse);
    rpc CreateMarket (CreateMarketRequest) returns (CreateMarketResponse);    
    rpc StopMarket (StopMarketRequest) returns (StopMarketResponse);
    rpc StartMarket (StartMarketRequest) returns (StartMarketResponse);
    rpc Deposit (DepositRequest) returns (DepositResponse);    
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);
    rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
}
message WithdrawRequest {
    string user_id = 1;
    string asset = 2;
    string amount = 3;
}
message WithdrawResponse {
    bool success = 1;
    string user_id = 2;
    string asset = 3;
    string amount = 4;
}  
 
message  DepositRequest {
    string user_id = 1;
    string asset = 2;
    string amount = 3;
}
message DepositResponse {
    bool success = 1;
    string user_id = 2;
    string asset = 3;
    string amount = 4;
}
message GetBalanceRequest {
    string user_id = 1;
    string asset = 2;
}
message GetBalanceResponse {
    string user_id = 1;
    string asset = 2;
    string amount = 3;
}
message ProtoTrade {
    string id = 1;
    int64 timestamp = 2; // Unix timestamp
    string market_id = 3;

    string price = 6;
    string base_amount = 7;
    string quote_amount = 8;

    string seller_user_id = 9;
    string seller_order_id = 10;
    string seller_fee = 12;

    string buyer_user_id = 13;
    string buyer_order_id = 14;
    string buyer_fee = 16;
}
message AddOrderResponse {
    string order_id = 1;
    repeated ProtoTrade trades = 4;
}
message AddOrderRequest {
  string market_id = 4;
  string order_type = 5;//LIMIT or MARKET
  string side = 6;//BUY or SELL
  string user_id = 7;
  string price = 9;
  string base_amount = 10;
  string quote_amount = 11; 
  string maker_fee = 12;
  string taker_fee = 13;
}


message CancelOrderRequest {
    string order_id = 1;
    string market_id = 2;
}

message CancelOrderResponse {
    bool success = 1;
    string order_id = 2;
    string market_id = 3;
}

message CancelAllOrdersRequest {

    string market_id = 1;
}

message CancelAllOrdersResponse {
    bool success = 1;
    string market_id = 2;
}

message CreateMarketRequest {
    string market_id = 1;
    string base_asset = 2;
    string quote_asset = 3;
    uint32 pool_size = 4;
    string default_maker_fee = 5;
    string default_taker_fee = 6;
}

message CreateMarketResponse {
    bool success = 1;
    string market_id = 2;

}

message StopMarketRequest {
    string market_id = 1;
}

message StopMarketResponse {
    bool success = 1;
    string market_id = 2;
}

message StartMarketRequest {
    string market_id = 1;
}

message StartMarketResponse {
    bool success = 1;
    string market_id = 2;
}
